--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-modernist
+theme: jekyll-theme-minimal
 title: Welcome to Shawn Shields’s homepage!
 description: Feel free to bookmark this page and keep an eye on my project updates
